# soroban-dev-console

./: package-lock.json  package.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.module.ts  index.ts  main.ts
apps/api/src/common/logging/: correlation.middleware.ts  rpc-logging.middleware.ts
apps/api/src/modules/health/: health.controller.ts
apps/api/src/modules/rpc/: rpc-rate-limit.guard.ts  rpc.controller.ts  rpc.module.ts  rpc.service.ts
apps/api/src/modules/shares/: shares.controller.ts  shares.module.ts
apps/api/src/modules/workspaces/: workspace.dto.ts  workspaces.controller.ts  workspaces.module.ts  workspaces.service.ts
apps/web/app/contracts/[contractId]/: page.tsx
apps/web/app/tx-builder/: page.tsx
apps/web/components/: wallet-connect.tsx
apps/web/lib/: contract-overview.ts
apps/web/lib/wallet/: provider.ts
apps/web/store/: useAbiStore.ts  useWallet.ts
contracts/: Cargo.toml
contracts/error-trigger/: Cargo.toml
contracts/error-trigger/src/: lib.rs
contracts/event-fixture/: Cargo.toml
contracts/event-fixture/src/: lib.rs
contracts/failure-fixture/: Cargo.toml
contracts/failure-fixture/src/: lib.rs
scripts/: deploy-test-suite.sh
